--- a/myHttpServer/resource/chess.css
+++ b/myHttpServer/resource/chess.css
@@ -12,7 +12,7 @@
 		cursor:pointer;
 }
 #chesspanel table td{
-		height:35px;
+		height:37px;
 		width:35px;
 		}
 #control{
@@ -27,7 +27,7 @@
 }
 #user{
 		position:absolute;
-		top:2px;
+		top:0px;
 		margin:0px;
 		width:396px;
 		height:200px;
@@ -37,7 +37,7 @@
 	}
 #computer{
 		position:absolute;
-		top:392px;
+		top:390px;
 		margin:0px;
 		width:396px;
 		height:200px;
@@ -55,7 +55,7 @@
 		border-right:2px inset #D02090;
 }
 #start{
-		position:relative;
+		position:absolute;
 		top:150px;
 		left:20px;
 		width:80px;
