添加了显示代码，实现了结构，表现，行为的分离

--- a/myHttpServer/resource/chessTable.css
+++ b/myHttpServer/resource/chessTable.css
@@ -85,3 +85,13 @@ body{
 #black{
 		background-image:url(blackbox.png);
 }
+#show{
+	background:#E0F0F8;
+}
+.think{
+	background:#E0F0F8;
+	border:0;
+	height:30px;
+	width:165px;
+	text-align:center;
+}
